--- a/vue3+typescript/2_Learn_webpack/1_webpack_base/package.json
+++ b/vue3+typescript/2_Learn_webpack/1_webpack_base/package.json
@@ -10,11 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
+    "postcss-preset-env": "^7.4.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "css-loader": "^6.7.1"
+    "css-loader": "^6.7.1",
+    "postcss-loader": "^6.2.1"
   }
 }
