--- a/vue3+typescript/2_Learn_webpack/3_webpack_其他资源/package.json
+++ b/vue3+typescript/2_Learn_webpack/3_webpack_其他资源/package.json
@@ -21,6 +21,10 @@
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "file-loader": "^6.2.0",
