--- a/vue3+typescript/2_Learn_webpack/4_webpack_vue/package.json
+++ b/vue3+typescript/2_Learn_webpack/4_webpack_vue/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --config config/webpack.prod.config.js",
+    "server": "webpack server --config config/webpack.dev.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "normalize.css": "^8.0.1",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "webpack-dev-server": "^4.7.4"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
@@ -26,6 +29,7 @@
     "sass-loader": "^12.6.0",
     "vue-loader": "^17.0.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   }
 }
