--- a/vue3+typescript/2_learn_webpack/4_webpack_vue/package.json
+++ b/vue3+typescript/2_learn_webpack/4_webpack_vue/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config config/webpack.prod.config.js",
-    "server": "webpack server --config config/webpack.dev.config.js"
+    "serve": "webpack serve --config config/webpack.dev.config.js"
   },
   "keywords": [],
   "author": "",
